Implement Resident Assignment API and verify Flyway migration