@@ -1,18 +1,14 @@
 package com.aquatrack.aquatrack.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.aquatrack.aquatrack.dto.WaterUsageLogRequest;
 import com.aquatrack.aquatrack.dto.WaterUsageLogResponse;
-import com.aquatrack.aquatrack.exception.ResourceNotFoundException;
-import com.aquatrack.aquatrack.entity.BillingCycle;
 import com.aquatrack.aquatrack.entity.Household;
 import com.aquatrack.aquatrack.entity.UsageSource;
 import com.aquatrack.aquatrack.entity.WaterUsageLog;
-import com.aquatrack.aquatrack.repository.BillingCycleRepository;
 import com.aquatrack.aquatrack.repository.HouseholdRepository;
 import com.aquatrack.aquatrack.repository.WaterUsageLogRepository;
 
@@ -21,31 +17,27 @@ public class WaterUsageLogServiceImpl implements WaterUsageLogService {
 
     private final WaterUsageLogRepository waterUsageLogRepository;
     private final HouseholdRepository householdRepository;
-    private final BillingCycleRepository billingCycleRepository;
 
     public WaterUsageLogServiceImpl(WaterUsageLogRepository waterUsageLogRepository,
-            HouseholdRepository householdRepository,
-            BillingCycleRepository billingCycleRepository) {
+                                     HouseholdRepository householdRepository) {
         this.waterUsageLogRepository = waterUsageLogRepository;
         this.householdRepository = householdRepository;
-        this.billingCycleRepository = billingCycleRepository;
     }
 
     @Override
     public WaterUsageLogResponse create(WaterUsageLogRequest request) {
         Household household = householdRepository.findById(request.getHouseholdId())
-                .orElseThrow(() -> new ResourceNotFoundException("Household not found"));
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Household not found with id: " + request.getHouseholdId()));
 
         WaterUsageLog log = new WaterUsageLog();
         log.setHousehold(household);
         log.setUsageDate(request.getUsageDate());
         log.setLitersConsumed(request.getLitersConsumed());
-        log.setSource(parseSource(request.getSource()));
+        log.setSource(UsageSource.MANUAL_ENTRY);
 
         if (request.getBillingCycleId() != null) {
-            BillingCycle billingCycle = billingCycleRepository.findById(request.getBillingCycleId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Billing cycle not found"));
-            log.setBillingCycle(billingCycle);
+            // billing cycle linkage can be added here later
         }
 
         WaterUsageLog saved = waterUsageLogRepository.save(log);
@@ -57,13 +49,13 @@ public class WaterUsageLogServiceImpl implements WaterUsageLogService {
         return waterUsageLogRepository.findAll()
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public WaterUsageLogResponse getById(Long id) {
         WaterUsageLog log = waterUsageLogRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Usage log not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Water usage log not found with id: " + id));
         return toResponse(log);
     }
 
@@ -72,29 +64,21 @@ public class WaterUsageLogServiceImpl implements WaterUsageLogService {
         return waterUsageLogRepository.findByHouseholdId(householdId)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public WaterUsageLogResponse update(Long id, WaterUsageLogRequest request) {
         WaterUsageLog log = waterUsageLogRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Usage log not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Water usage log not found with id: " + id));
 
         Household household = householdRepository.findById(request.getHouseholdId())
-                .orElseThrow(() -> new ResourceNotFoundException("Household not found"));
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Household not found with id: " + request.getHouseholdId()));
 
         log.setHousehold(household);
         log.setUsageDate(request.getUsageDate());
         log.setLitersConsumed(request.getLitersConsumed());
-        log.setSource(parseSource(request.getSource()));
-
-        if (request.getBillingCycleId() != null) {
-            BillingCycle billingCycle = billingCycleRepository.findById(request.getBillingCycleId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Billing cycle not found"));
-            log.setBillingCycle(billingCycle);
-        } else {
-            log.setBillingCycle(null);
-        }
 
         WaterUsageLog saved = waterUsageLogRepository.save(log);
         return toResponse(saved);
@@ -102,28 +86,17 @@ public class WaterUsageLogServiceImpl implements WaterUsageLogService {
 
     @Override
     public void delete(Long id) {
-        if (!waterUsageLogRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Usage log not found");
-        }
         waterUsageLogRepository.deleteById(id);
-    }
-
-    private UsageSource parseSource(String source) {
-        try {
-            return UsageSource.valueOf(source.toUpperCase());
-        } catch (Exception e) {
-            throw new RuntimeException("Invalid source. Must be one of: METER, MANUAL_ENTRY, SENSOR");
-        }
     }
 
     private WaterUsageLogResponse toResponse(WaterUsageLog log) {
         return new WaterUsageLogResponse(
                 log.getId(),
-                log.getHousehold() != null ? log.getHousehold().getId() : null,
-                log.getHousehold() != null ? log.getHousehold().getFlatNumber() : null,
+                log.getHousehold().getId(),
                 log.getUsageDate(),
                 log.getLitersConsumed(),
-                log.getSource() != null ? log.getSource().name() : null,
-                log.getBillingCycle() != null ? log.getBillingCycle().getId() : null);
+                log.getSource().name(),
+                log.getBillingCycle() != null ? log.getBillingCycle().getId() : null
+        );
     }
 }
